# sdlchess

./: .env  .gitignore  CMakeLists.txt  Makefile  README.md  Readme.md  TODOs.txt  chess.out  main.cpp  tester.cpp
headers/: Bishop.h  Board.h  ChessColored.h  Env.h  FDirections.h  FDirector.h  Game.h  HelperFunctions.h  King.h  Knight.h  MTexture.h  MoveLogger.h  PGNGameDetails.h  Pawn.h  Piece.h  QRBPiece.h  Queen.h  Readme.md  Rook.h  SharedData.h  Square.h
pgn_games/: Adams.pgn  mix.pgn  smothered_mate_collection.pgn  weirdest_games.pgn
sources/: Bishop.cpp  Board.cpp  ChessColored.cpp  FDirections.cpp  FDirector.cpp  Game.cpp  HelperFunctions.cpp  King.cpp  Knight.cpp  MTexture.cpp  MoveLogger.cpp  PGNGameDetails.cpp  Pawn.cpp  Piece.cpp  QRBPiece.cpp  Queen.cpp  Rook.cpp  Square.cpp
