cmake_minimum_required(VERSION 3.22)
project(chess)
set(CMAKE_CXX_STANDARD 14)
set(HEADERS "headers/Board.h" "headers/Game.h" "headers/MTexture.h" "headers/Piece.h" "headers/SharedData.h" "headers/Square.h" "headers/ChessColored.h" "headers/HelperFunctions.h" "headers/King.h" "headers/Queen.h" "headers/Bishop.h" "headers/Knight.h" "headers/Rook.h" "headers/Pawn.h" headers/FDirections.h)
set(SOURCES "sources/Game.cpp" "sources/MTexture.cpp" sources/ChessColored.cpp sources/Board.cpp sources/Piece.cpp sources/Rook.cpp sources/Pawn.cpp)
find_package(SDL2 REQUIRED SDL2)
add_executable(chess.out main.cpp ${HEADERS} ${SOURCES})
target_link_libraries(chess.out PRIVATE SDL2 SDL2_image SDL2_ttf)